--- a/Movity/Src/App/Scene/BottomSheet/BottomSheetStoryboard.storyboard
+++ b/Movity/Src/App/Scene/BottomSheet/BottomSheetStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MPm-Nf-wFF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rKv-pz-xup">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,60 +10,91 @@
     </dependencies>
     <scenes>
         <!--Bottom Sheet View Controller-->
-        <scene sceneID="UUD-dF-DYS">
+        <scene sceneID="3RS-Wy-dtW">
             <objects>
-                <viewController storyboardIdentifier="bottomSheetVC" id="MPm-Nf-wFF" customClass="BottomSheetViewController" customModule="Movity" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3Vy-eg-qZj">
+                <viewController storyboardIdentifier="bottomSheetViewController" id="rKv-pz-xup" customClass="BottomSheetViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BBW-3g-dqn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XAC-eB-Ubg">
-                                <rect key="frame" x="0.0" y="44" width="414" height="20"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dwf-34-3qV" customClass="DesignableUIView" customModule="Movity" customModuleProvider="target">
-                                        <rect key="frame" x="187" y="7.5" width="40" height="5"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="5" id="5Bi-dF-24r"/>
-                                            <constraint firstAttribute="width" constant="40" id="KWn-2o-2vb"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="просп 40-летия Победы, 101, Ростов-на-Дону, Ростовская обл." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fxI-f1-Mdt">
+                                <rect key="frame" x="67" y="82" width="335" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ei_location" translatesAutoresizingMaskIntoConstraints="NO" id="pln-2T-IR8">
+                                <rect key="frame" x="16" y="91" width="25" height="25"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="2C0-Cb-okS"/>
-                                    <constraint firstItem="Dwf-34-3qV" firstAttribute="centerY" secondItem="XAC-eB-Ubg" secondAttribute="centerY" id="Kri-89-alo"/>
-                                    <constraint firstItem="Dwf-34-3qV" firstAttribute="centerX" secondItem="XAC-eB-Ubg" secondAttribute="centerX" id="R7E-WF-vhs"/>
+                                    <constraint firstAttribute="height" constant="25" id="KXI-fA-7Ck"/>
+                                    <constraint firstAttribute="width" constant="25" id="ehA-Dg-pp8"/>
                                 </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XwP-v1-wW7">
-                                <rect key="frame" x="0.0" y="64" width="414" height="798"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1a-GJ-wiX" customClass="CornerButton" customModule="AvtoTo" customModuleProvider="target">
+                                <rect key="frame" x="16" y="148" width="382" height="44"/>
+                                <color key="backgroundColor" red="0.15686274510000001" green="0.50588235290000005" blue="0.74509803919999995" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="83P-uU-OYX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <state key="normal" title="Выбрать этот адрес">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom_sheet_upper" translatesAutoresizingMaskIntoConstraints="NO" id="ZKf-20-DCe">
+                                <rect key="frame" x="193" y="54" width="28" height="3"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bxi-j9-rfv" customClass="CornerButton" customModule="AvtoTo" customModuleProvider="target">
+                                <rect key="frame" x="16" y="198" width="382" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8m8-js-jym"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Выбрать из списка">
+                                    <color key="titleColor" red="0.15686274510000001" green="0.50588235290000005" blue="0.74509803919999995" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="MY3-Lf-7vZ"/>
+                        <viewLayoutGuide key="safeArea" id="U6o-Re-Dfj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="MY3-Lf-7vZ" firstAttribute="trailing" secondItem="XAC-eB-Ubg" secondAttribute="trailing" id="3wK-O1-NPq"/>
-                            <constraint firstItem="MY3-Lf-7vZ" firstAttribute="bottom" secondItem="XwP-v1-wW7" secondAttribute="bottom" id="B1i-Ft-xBk"/>
-                            <constraint firstItem="XwP-v1-wW7" firstAttribute="top" secondItem="XAC-eB-Ubg" secondAttribute="bottom" id="Je3-Yl-TRV"/>
-                            <constraint firstItem="XAC-eB-Ubg" firstAttribute="leading" secondItem="MY3-Lf-7vZ" secondAttribute="leading" id="OZN-yw-t2O"/>
-                            <constraint firstItem="XAC-eB-Ubg" firstAttribute="top" secondItem="MY3-Lf-7vZ" secondAttribute="top" id="V3h-U0-XuV"/>
-                            <constraint firstItem="MY3-Lf-7vZ" firstAttribute="trailing" secondItem="XwP-v1-wW7" secondAttribute="trailing" id="W4q-U9-nGT"/>
-                            <constraint firstItem="XwP-v1-wW7" firstAttribute="leading" secondItem="MY3-Lf-7vZ" secondAttribute="leading" id="ki4-Px-w2B"/>
+                            <constraint firstItem="ZKf-20-DCe" firstAttribute="top" secondItem="U6o-Re-Dfj" secondAttribute="top" constant="10" id="3k4-i1-Ma2"/>
+                            <constraint firstItem="c1a-GJ-wiX" firstAttribute="leading" secondItem="U6o-Re-Dfj" secondAttribute="leading" constant="16" id="3mD-g8-1uh"/>
+                            <constraint firstItem="U6o-Re-Dfj" firstAttribute="trailing" secondItem="c1a-GJ-wiX" secondAttribute="trailing" constant="16" id="EGW-rn-ZwA"/>
+                            <constraint firstItem="Bxi-j9-rfv" firstAttribute="top" secondItem="c1a-GJ-wiX" secondAttribute="bottom" constant="6" id="aAU-f6-IXK"/>
+                            <constraint firstItem="ZKf-20-DCe" firstAttribute="centerX" secondItem="U6o-Re-Dfj" secondAttribute="centerX" id="bb9-4B-dlD"/>
+                            <constraint firstItem="U6o-Re-Dfj" firstAttribute="trailing" secondItem="fxI-f1-Mdt" secondAttribute="trailing" constant="12" id="ch5-Ro-dlV"/>
+                            <constraint firstItem="fxI-f1-Mdt" firstAttribute="top" secondItem="ZKf-20-DCe" secondAttribute="bottom" constant="25" id="ciI-TS-f2S"/>
+                            <constraint firstItem="fxI-f1-Mdt" firstAttribute="leading" secondItem="pln-2T-IR8" secondAttribute="trailing" constant="26" id="dQf-A5-Toq"/>
+                            <constraint firstItem="Bxi-j9-rfv" firstAttribute="leading" secondItem="c1a-GJ-wiX" secondAttribute="leading" id="e35-rc-Gd8"/>
+                            <constraint firstItem="Bxi-j9-rfv" firstAttribute="trailing" secondItem="c1a-GJ-wiX" secondAttribute="trailing" id="eSw-oe-b4o"/>
+                            <constraint firstItem="pln-2T-IR8" firstAttribute="top" secondItem="U6o-Re-Dfj" secondAttribute="top" constant="47" id="gA5-28-Xph"/>
+                            <constraint firstItem="pln-2T-IR8" firstAttribute="leading" secondItem="U6o-Re-Dfj" secondAttribute="leading" constant="16" id="jio-S4-yyU"/>
+                            <constraint firstItem="c1a-GJ-wiX" firstAttribute="top" secondItem="fxI-f1-Mdt" secondAttribute="bottom" constant="25" id="tKp-ao-YZu"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="contentView" destination="XwP-v1-wW7" id="Xr0-jX-vGx"/>
-                        <outlet property="handleArea" destination="XAC-eB-Ubg" id="NZ8-AW-oUo"/>
+                        <outlet property="addressLabel" destination="fxI-f1-Mdt" id="eGh-DY-FGU"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dsf-aC-ReB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bpp-sC-9xY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="231.8840579710145" y="128.57142857142856"/>
+            <point key="canvasLocation" x="494" y="833"/>
         </scene>
     </scenes>
     <resources>
+        <image name="bottom_sheet_upper" width="28" height="3"/>
+        <image name="ei_location" width="25" height="25"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
