--- a/Movity/Src/App/Scene/MainMap/MainMapStoryboard.storyboard
+++ b/Movity/Src/App/Scene/MainMap/MainMapStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2V5-SD-OgN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hhY-td-T6r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,38 +9,78 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main Map View Controller-->
-        <scene sceneID="I8t-gp-f2C">
+        <!--Пункт выдачи-->
+        <scene sceneID="ik2-1x-S8m">
             <objects>
-                <viewController storyboardIdentifier="mainMapVC" id="2V5-SD-OgN" customClass="MainMapViewController" customModule="Movity" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="iOH-rg-oSu">
+                <viewController storyboardIdentifier="pointOfDeliveryMapVC" id="hhY-td-T6r" customClass="PointOfDeliveryMapViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Irh-lz-mLg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wLa-Cr-JhM" customClass="YMKMapView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="72U-0Q-i8s" customClass="YMKMapView">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nd8-vr-ooW" customClass="RoundedView" customModule="AvtoTo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="772" width="414" height="90"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vC3-kH-6XF" customClass="CornerButton" customModule="AvtoTo" customModuleProvider="target">
+                                        <rect key="frame" x="16" y="30" width="382" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="jFh-VI-Bhn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal" title="Выбрать из списка">
+                                            <color key="titleColor" red="0.15686274510000001" green="0.50588235290000005" blue="0.74509803919999995" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom_sheet_upper" translatesAutoresizingMaskIntoConstraints="NO" id="8Fv-6a-KPm">
+                                        <rect key="frame" x="193" y="10" width="28" height="3"/>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="vC3-kH-6XF" secondAttribute="trailing" constant="16" id="CVt-kM-dQb"/>
+                                    <constraint firstItem="vC3-kH-6XF" firstAttribute="leading" secondItem="Nd8-vr-ooW" secondAttribute="leading" constant="16" id="FCJ-Sb-3Pb"/>
+                                    <constraint firstAttribute="bottom" secondItem="vC3-kH-6XF" secondAttribute="bottom" constant="16" id="KRG-Ai-a6Q"/>
+                                    <constraint firstItem="8Fv-6a-KPm" firstAttribute="top" secondItem="Nd8-vr-ooW" secondAttribute="top" constant="10" id="fgz-fd-eKe"/>
+                                    <constraint firstItem="8Fv-6a-KPm" firstAttribute="centerX" secondItem="Nd8-vr-ooW" secondAttribute="centerX" id="i79-dC-m7e"/>
+                                    <constraint firstAttribute="height" constant="90" id="lt5-06-SRg"/>
+                                </constraints>
                             </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="9eJ-Is-7Mz"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="UT4-iI-aSg"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="wLa-Cr-JhM" firstAttribute="top" secondItem="9eJ-Is-7Mz" secondAttribute="top" id="1rZ-gI-l8j"/>
-                            <constraint firstItem="9eJ-Is-7Mz" firstAttribute="trailing" secondItem="wLa-Cr-JhM" secondAttribute="trailing" id="EPT-xx-MmF"/>
-                            <constraint firstItem="wLa-Cr-JhM" firstAttribute="leading" secondItem="9eJ-Is-7Mz" secondAttribute="leading" id="SOu-aX-auV"/>
-                            <constraint firstItem="9eJ-Is-7Mz" firstAttribute="bottom" secondItem="wLa-Cr-JhM" secondAttribute="bottom" id="nfv-Td-KhA"/>
+                            <constraint firstItem="UT4-iI-aSg" firstAttribute="bottom" secondItem="72U-0Q-i8s" secondAttribute="bottom" id="1jl-Hh-QZt"/>
+                            <constraint firstItem="Nd8-vr-ooW" firstAttribute="centerX" secondItem="UT4-iI-aSg" secondAttribute="centerX" id="6Wk-UV-Mhc"/>
+                            <constraint firstItem="UT4-iI-aSg" firstAttribute="trailing" secondItem="Nd8-vr-ooW" secondAttribute="trailing" id="CZR-Kt-UYK"/>
+                            <constraint firstItem="72U-0Q-i8s" firstAttribute="leading" secondItem="Irh-lz-mLg" secondAttribute="leading" id="Mfz-5Y-N3n"/>
+                            <constraint firstItem="72U-0Q-i8s" firstAttribute="trailing" secondItem="Irh-lz-mLg" secondAttribute="trailing" id="m4D-Za-m9m"/>
+                            <constraint firstItem="UT4-iI-aSg" firstAttribute="bottom" secondItem="Nd8-vr-ooW" secondAttribute="bottom" id="mYl-4n-jqM"/>
+                            <constraint firstItem="Nd8-vr-ooW" firstAttribute="leading" secondItem="UT4-iI-aSg" secondAttribute="leading" id="ooY-vj-twS"/>
+                            <constraint firstItem="72U-0Q-i8s" firstAttribute="top" secondItem="UT4-iI-aSg" secondAttribute="top" id="rHh-kp-sC6"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Пункт выдачи" id="5WD-Up-7Ou">
+                        <barButtonItem key="backBarButtonItem" title=" " id="Nah-Ip-qVx"/>
+                    </navigationItem>
                     <connections>
-                        <outlet property="mapView" destination="wLa-Cr-JhM" id="ZPO-UZ-Je0"/>
+                        <outlet property="chooseFromListButtonView" destination="Nd8-vr-ooW" id="2X8-tt-ULk"/>
+                        <outlet property="mapView" destination="72U-0Q-i8s" id="Bf2-zO-BEm"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tTt-OH-I3q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j7e-v4-Qdq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-442" y="174"/>
+            <point key="canvasLocation" x="749" y="904"/>
         </scene>
     </scenes>
     <resources>
+        <image name="bottom_sheet_upper" width="28" height="3"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
