Registration interface and validating has been finished

--- a/Movity/Src/App/Scene/Login/LoginStoryboard.storyboard
+++ b/Movity/Src/App/Scene/Login/LoginStoryboard.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8dh-z9-GkV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tes-Mg-kxi">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,22 +13,22 @@
         <!--Login View Controller-->
         <scene sceneID="h8q-e6-4JT">
             <objects>
-                <viewController id="8dh-z9-GkV" customClass="LoginViewController" customModule="Movity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginViewController" id="8dh-z9-GkV" customClass="LoginViewController" customModule="Movity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="puz-DP-S8d">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aT5-i1-PHl">
-                                <rect key="frame" x="0.0" y="170" width="414" height="692"/>
+                                <rect key="frame" x="0.0" y="221.5" width="414" height="640.5"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3qN-fH-gE8">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="640.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4g-TJ-LBr">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="350" placeholderIntrinsicHeight="76" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lkO-4P-Onc">
-                                                        <rect key="frame" x="0.0" y="8.5" width="414" height="383"/>
+                                                        <rect key="frame" x="0.0" y="28.5" width="414" height="343"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wjE-OA-Jd8" userLabel="Username View">
                                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
@@ -86,17 +87,16 @@
                                                                     <constraint firstAttribute="height" constant="50" id="hbh-2I-cSp"/>
                                                                 </constraints>
                                                             </view>
-                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LVK-fG-JxD" userLabel="LogIn Button" customClass="MTYDesignableButton" customModule="Movity" customModuleProvider="target">
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LVK-fG-JxD" userLabel="LogIn Button">
                                                                 <rect key="frame" x="0.0" y="210" width="414" height="44"/>
                                                                 <subviews>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKg-Mq-pfs" customClass="DesignableUIButton" customModule="Movity" customModuleProvider="target">
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKg-Mq-pfs" customClass="MTYDesignableButton" customModule="Movity" customModuleProvider="target">
                                                                         <rect key="frame" x="16" y="0.0" width="382" height="44"/>
-                                                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" constant="44" id="P2Z-br-aIP"/>
                                                                         </constraints>
                                                                         <state key="normal" title="Войти">
-                                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                            <color key="titleColor" name="AppWhite"/>
                                                                         </state>
                                                                         <userDefinedRuntimeAttributes>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="IBButtonState">
@@ -131,7 +131,9 @@
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" constant="44" id="bwH-Bb-54l"/>
                                                                         </constraints>
-                                                                        <state key="normal" title="Создать аккаунт"/>
+                                                                        <state key="normal" title="Создать аккаунт">
+                                                                            <color key="titleColor" name="VioletLight"/>
+                                                                        </state>
                                                                         <userDefinedRuntimeAttributes>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="IBButtonState">
                                                                                 <integer key="value" value="1"/>
@@ -157,13 +159,6 @@
                                                                     <constraint firstAttribute="height" constant="10" id="h2i-fW-mzH"/>
                                                                 </constraints>
                                                             </view>
-                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t7p-t9-Yns">
-                                                                <rect key="frame" x="130" y="353" width="154" height="30"/>
-                                                                <state key="normal" title="Восстановить пароль"/>
-                                                                <connections>
-                                                                    <action selector="onPasswordChangeButtonClick:" destination="8dh-z9-GkV" eventType="touchUpInside" id="DYQ-xn-C4k"/>
-                                                                </connections>
-                                                            </button>
                                                         </subviews>
                                                         <constraints>
                                                             <constraint firstItem="eF6-cI-4NB" firstAttribute="leading" secondItem="lkO-4P-Onc" secondAttribute="leading" id="5rZ-fX-N9z"/>
@@ -208,47 +203,51 @@
                                     <constraint firstItem="lkO-4P-Onc" firstAttribute="width" secondItem="aT5-i1-PHl" secondAttribute="width" id="zSe-yS-sND"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ffQ-Lq-pkj">
-                                <rect key="frame" x="114" y="50" width="186" height="90"/>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SuT-DO-UQP">
+                                <rect key="frame" x="149.5" y="136" width="115" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" name="VioletLight"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TJT-aa-g1o"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="AppWhite"/>
                         <constraints>
-                            <constraint firstItem="ffQ-Lq-pkj" firstAttribute="top" secondItem="TJT-aa-g1o" secondAttribute="top" constant="10" id="BzW-cK-4sM"/>
-                            <constraint firstItem="ffQ-Lq-pkj" firstAttribute="top" secondItem="puz-DP-S8d" secondAttribute="top" constant="50" id="OMa-5u-IQf"/>
+                            <constraint firstItem="SuT-DO-UQP" firstAttribute="centerX" secondItem="TJT-aa-g1o" secondAttribute="centerX" id="7Zz-Bb-V24"/>
+                            <constraint firstItem="Dpv-vi-kpC" firstAttribute="top" secondItem="SuT-DO-UQP" secondAttribute="bottom" constant="66" id="Gs8-ns-ejD"/>
                             <constraint firstItem="TJT-aa-g1o" firstAttribute="bottom" secondItem="aT5-i1-PHl" secondAttribute="bottom" id="Qly-SI-bMe"/>
+                            <constraint firstItem="SuT-DO-UQP" firstAttribute="top" secondItem="TJT-aa-g1o" secondAttribute="top" constant="48" id="VR4-ED-FIb"/>
                             <constraint firstItem="aT5-i1-PHl" firstAttribute="leading" secondItem="TJT-aa-g1o" secondAttribute="leading" id="eic-Yw-prz"/>
                             <constraint firstItem="TJT-aa-g1o" firstAttribute="trailing" secondItem="aT5-i1-PHl" secondAttribute="trailing" id="lSS-cR-7Jm"/>
-                            <constraint firstItem="aT5-i1-PHl" firstAttribute="top" secondItem="ffQ-Lq-pkj" secondAttribute="bottom" constant="30" id="leV-JD-Kac"/>
-                            <constraint firstItem="ffQ-Lq-pkj" firstAttribute="centerX" secondItem="TJT-aa-g1o" secondAttribute="centerX" id="xd8-71-OSL"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="BzW-cK-4sM"/>
-                                <exclude reference="OMa-5u-IQf"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=compact">
-                            <mask key="constraints">
-                                <include reference="BzW-cK-4sM"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="OMa-5u-IQf"/>
-                            </mask>
-                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="zaK-4R-lqD"/>
                     <connections>
                         <outlet property="createAccountButton" destination="fGS-L9-c2j" id="UE7-14-yam"/>
                         <outlet property="loginButton" destination="oKg-Mq-pfs" id="pV3-cC-jk1"/>
                         <outlet property="passwordTextField" destination="Le7-Ff-MpG" id="qEq-ea-nGH"/>
-                        <outlet property="resetPasswordButton" destination="t7p-t9-Yns" id="gdM-MD-bee"/>
                         <outlet property="usernameTextField" destination="Dpv-vi-kpC" id="4jE-3a-CZ4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XFe-hw-rW9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="955.07246376811599" y="71.651785714285708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="WxU-Bj-eby">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tes-Mg-kxi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uO0-eQ-Z1w">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8dh-z9-GkV" kind="relationship" relationship="rootViewController" id="AZ6-Rc-NwY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jlw-Cr-nH4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="44.927536231884062" y="71.651785714285708"/>
         </scene>
@@ -256,9 +255,6 @@
     <designables>
         <designable name="Dpv-vi-kpC">
             <size key="intrinsicContentSize" width="130.5" height="32.70703125"/>
-        </designable>
-        <designable name="LVK-fG-JxD">
-            <size key="intrinsicContentSize" width="30" height="34"/>
         </designable>
         <designable name="Le7-Ff-MpG">
             <size key="intrinsicContentSize" width="50" height="32.70703125"/>
@@ -271,7 +267,12 @@
         </designable>
     </designables>
     <resources>
-        <image name="logo" width="186" height="90"/>
+        <namedColor name="AppWhite">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="VioletLight">
+            <color red="0.85098039215686272" green="0.60784313725490191" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
